--- a/templates/checkout-page.html
+++ b/templates/checkout-page.html
@@ -159,6 +159,39 @@
 
     </div>
   </main>
+  {% load paystack %}
+    <form>
+      <script src="https://js.paystack.co/v1/inline.js"></script>
+      <button type="button" onclick="payWithPaystack()"> Pay </button> 
+    </form>
+    
+<script>
+  function payWithPaystack(){
+    var handler = PaystackPop.setup({
+      key: 'pk_test_3f7e5637d0d1c970683fa7b4423675a92c4119a4',
+      email: '{{user.email}}',
+      amount: 10000,
+      ref: ''+Math.floor((Math.random() * 1000000000) + 1), // generates a pseudo-unique reference. Please replace with a reference you generated. Or remove the line entirely so our API will generate one for you
+      metadata: {
+         custom_fields: [
+            {
+                display_name: "Samuel Dave",
+                variable_name: "mobile_number",
+                value: "+2348012345678"
+            }
+         ]
+      },
+      callback: function(response){
+          alert('success. transaction ref is ' + response.reference);
+      },
+      onClose: function(){
+          alert('window closed');
+      }
+    });
+    handler.openIframe();
+  }
+</script>
+    </script>
   <!--Main layout-->
 
 {% endblock content %}
