--- a/templates/checkout-page.html
+++ b/templates/checkout-page.html
@@ -97,32 +97,20 @@
           <!-- Heading -->
           <h4 class="d-flex justify-content-between align-items-center mb-3">
             <span class="text-muted">Your cart</span>
-            <span class="badge badge-secondary badge-pill">3</span>
+            <span class="badge badge-secondary badge-pill">{{order.items.count}}</span>
           </h4>
 
           <!-- Cart -->
           <ul class="list-group mb-3 z-depth-1">
+            {% for order_item in order.items.all %}
             <li class="list-group-item d-flex justify-content-between lh-condensed">
               <div>
-                <h6 class="my-0">Product name</h6>
-                <small class="text-muted">Brief description</small>
+                <h6 class="my-0">{{order_item.quantity}} x {{ order_item.item.title }}</h6>
+                <small class="text-muted">{{ order_item.item.description }}</small>
               </div>
-              <span class="text-muted">$12</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Second product</h6>
-                <small class="text-muted">Brief description</small>
-              </div>
-              <span class="text-muted">$8</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Third item</h6>
-                <small class="text-muted">Brief description</small>
-              </div>
-              <span class="text-muted">$5</span>
-            </li>
+              <span class="text-muted">${{ order_item.get_final_price }}</span>
+            </li>   
+            {% endfor %}   
             <li class="list-group-item d-flex justify-content-between bg-light">
               <div class="text-success">
                 <h6 class="my-0">Promo code</h6>
@@ -132,12 +120,9 @@
             </li>
             <li class="list-group-item d-flex justify-content-between">
               <span>Total (USD)</span>
-              <strong>$20</strong>
+              <strong>${{order.get_total}}</strong>
             </li>
           </ul>
-          <!-- Cart -->
-
-          <!-- Promo code -->
           <form class="card p-2">
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Promo code" aria-label="Recipient's username" aria-describedby="basic-addon2">
@@ -146,9 +131,13 @@
               </div>
             </div>
           </form>
-          <!-- Promo code -->
+          <!-- Cart -->
 
+          <!-- Promo code -->
+          
         </div>
+        <!--Grid column-->
+
         <!--Grid column-->
 
       </div>
