--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -209,7 +209,7 @@
 
               <!--Card image-->
               <div class="view overlay">
-                <img src="{% static 'img/sample.jpg' %}" class="card-img-top"
+                <img src="{{item.image.url}}" class="card-img-top"
                   alt="">
                 <a href="{{ item.get_absolute_url }}">
                   <div class="mask rgba-white-slight"></div>
@@ -225,7 +225,7 @@
                 </a>
                 <h5>
                   <strong>
-                    <a href="{{ item.get_absolute_url }}" class="dark-grey-text">{{ user.emailaddress }}
+                    <a href="{{ item.get_absolute_url }}" class="dark-grey-text">{{ item.title }}
                       <span class="badge badge-pill {{ item.get_label_display }}-color">NEW</span>
                     </a>
                   </strong>
