--- a/templates/final_checkout.html
+++ b/templates/final_checkout.html
@@ -39,7 +39,8 @@
               </div>
               <span class="text-muted">${{ order_item.get_final_price }}</span>
             </li>   
-            {% endfor %}   
+            {% endfor %} 
+            {% if order.coupon %}              
             <li class="list-group-item d-flex justify-content-between bg-light">
               <div class="text-success">
                 <h6 class="my-0">Promo code</h6>
@@ -47,6 +48,7 @@
               </div>
               <span class="text-success">-${{order.coupon.amount}}</span>
             </li>
+            {% endif %}            
             <li class="list-group-item d-flex justify-content-between">
               <span>Total (USD)</span>
               <strong>${{order.get_total}}</strong>
