--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -185,7 +185,7 @@
 
           <form class="form-inline">
             <div class="md-form my-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+              <input class="form-control mr-sm-2" type="text" id="searchField" placeholder="Search" aria-label="Search">
             </div>
           </form>
         </div>
@@ -198,109 +198,120 @@
       <section class="text-center mb-4">
 
         <!--Grid row-->
-        <div class="row wow fadeIn">
+        <div class="product-list">
+          <div class="row wow fadeIn">
 
-          <!--Grid column-->
-          {% for item in object_list %}
-          <div class="col-lg-3 col-md-6 mb-4">
+            <!--Grid column-->
+            {% for item in object_list %}
+            <div class="col-lg-3 col-md-6 mb-4">
 
-            <!--Card-->
-            <div class="card">
+              <!--Card-->
+              <div class="card">
 
-              <!--Card image-->
-              <div class="view overlay">
-                <img src="{{item.image.url}}" class="card-img-top"
-                  alt="">
-                <a href="{{ item.get_absolute_url }}">
-                  <div class="mask rgba-white-slight"></div>
-                </a>
-              </div>
-              <!--Card image-->
+                <!--Card image-->
+                <div class="view overlay">
+                  <img src="{{item.image.url}}" height="200" width="70" class="card-img-top"
+                    alt="">
+                  <a href="{{ item.get_absolute_url }}">
+                    <div class="mask rgba-white-slight"></div>
+                  </a>
+                </div>
+                <!--Card image-->
 
-              <!--Card content-->
-              <div class="card-body text-center">
-                <!--Category & Title-->
-                <a href="" class="grey-text">
-                  <h5>{{ item.get_category_display }}</h5>
-                </a>
-                <h5>
-                  <strong>
-                    <a href="{{ item.get_absolute_url }}" class="dark-grey-text">{{ item.title }}
-                      <span class="badge badge-pill {{ item.get_label_display }}-color">NEW</span>
-                    </a>
+                <!--Card content-->
+                <div class="card-body text-center">
+                  <!--Category & Title-->
+                  <a href="" class="grey-text">
+                    <h5>{{ item.get_category_display }}</h5>
+                  </a>
+                  <h5>
+                    <strong>
+                      <a href="{{ item.get_absolute_url }}" class="dark-grey-text">{{ item.title }}
+                        <span class="badge badge-pill {{ item.get_label_display }}-color">NEW</span>
+                      </a>
+                    </strong>
+                  </h5>
+
+                  <h4 class="font-weight-bold blue-text">
+                  
+                    <strong>$
+                    {% if item.discount_price %}
+                      {{ item.discount_price }}
+                    {% else %}
+                      {{ item.price }}
+                    {% endif %}
                   </strong>
-                </h5>
+                  </h4>
 
-                <h4 class="font-weight-bold blue-text">
-                
-                  <strong>$
-                  {% if item.discount_price %}
-                    {{ item.discount_price }}
-                  {% else %}
-                    {{ item.price }}
-                  {% endif %}
-                </strong>
-                </h4>
+                </div>
+                <!--Card content-->
 
               </div>
-              <!--Card content-->
+              <!--Card-->
 
             </div>
-            <!--Card-->
+            <!--Grid column-->
+            {% endfor %}
+
 
           </div>
-          <!--Grid column-->
-          {% endfor %}
-
-
         </div>
         <!--Grid row-->
+        <div class="output">
+         
+
+
+          
+        </div>
 
       </section>
       <!--Section: Products v.3-->
+      <div class="pagination-container">
+        <!--Pagination-->
+        <nav class="d-flex justify-content-center wow fadeIn">
+          <ul class="pagination pg-blue">
 
-      <!--Pagination-->
-      <nav class="d-flex justify-content-center wow fadeIn">
-        <ul class="pagination pg-blue">
+            <!--Arrow left-->
+            <li class="page-item disabled">
+              <a class="page-link" href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+                <span class="sr-only">Previous</span>
+              </a>
+            </li>
 
-          <!--Arrow left-->
-          <li class="page-item disabled">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-              <span class="sr-only">Previous</span>
-            </a>
-          </li>
+            <li class="page-item active">
+              <a class="page-link" href="#">1
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="#">2</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="#">3</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="#">4</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="#">5</a>
+            </li>
 
-          <li class="page-item active">
-            <a class="page-link" href="#">1
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">2</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">3</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">4</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">5</a>
-          </li>
-
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Next</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <!--Pagination-->
-
+            <li class="page-item">
+              <a class="page-link" href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+                <span class="sr-only">Next</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <!--Pagination-->
+      </div>
     </div>
   </main>
   <!--Main layout-->
-  {% endblock content %}
+
+<!--   <script src="{% static 'js/searchField.js' %}"></script>
+ -->  
+ {% endblock content %}
 
