--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
   <link href="{% static 'css/mdb.min.css' %}" rel="stylesheet">
   <!-- Your custom styles (optional) -->
   <link href="{% static 'css/style.min.css' %}" rel="stylesheet">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <style type="text/css">
     html,
     body,
@@ -73,10 +74,12 @@
             <a class="nav-link waves-effect" href="{% url 'home_page' %}">Home
             </a>
           </li>
+         
+          {% if request.user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link waves-effect" href="{% url 'checkout' %}">Checkout</a>
           </li>
-          
+          {% endif %}
         </ul>
 
         <!-- Right -->
