--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -183,17 +183,25 @@
           </ul>
           <!-- Links -->
 
-          <form class="form-inline">
-            <div class="md-form my-0">
-              <input class="form-control mr-sm-2" type="text" id="searchField" placeholder="Search" aria-label="Search">
-            </div>
-          </form>
+          
         </div>
         <!-- Collapsible content -->
 
       </nav>
       <!--/.Navbar-->
-
+      <div class="">
+     
+          <form class="form-inline">
+                <div class="form-group">
+                  {{myfilter.form.title}}
+                  <!-- <input class="form-control mr-sm-2" type="text" id="searchField" placeholder="Search" aria-label="Search"> -->
+                   <button type="submit" class="btn btn-primary btn-sm" id="searchbar">search</button>          
+                </div>
+          </form>
+         
+          <br>
+        
+      </div>
       <!--Section: Products v.3-->
       <section class="text-center mb-4">
 
@@ -202,7 +210,7 @@
           <div class="row wow fadeIn">
 
             <!--Grid column-->
-            {% for item in object_list %}
+            {% for item in Item %}
             <div class="col-lg-3 col-md-6 mb-4">
 
               <!--Card-->
@@ -312,6 +320,16 @@
   <!--Main layout-->
 
 <!--   <script src="{% static 'js/searchField.js' %}"></script>
- -->  
+ -->
+
+<script>
+  $( function() {
+    $( "#searchbar" ).autocomplete({
+      source: '{% url 'home_page' %}',
+      minLength: 2
+    });
+    // body...
+  })
+</script> 
  {% endblock content %}
 
