--- a/templates/product-page.html
+++ b/templates/product-page.html
@@ -13,7 +13,7 @@
         <!--Grid column-->
         <div class="col-md-6 mb-4">
 
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/14.jpg" class="img-fluid" alt="">
+          <img src="{{object.image.url}}" class="img-fluid" alt="">
 
         </div>
         <!--Grid column-->
@@ -34,11 +34,11 @@
             <p class="lead">
               {% if object.discount_price %}
               <span class="mr-1">
-                <del>${{object.price}}</del>
+                <del>₦{{object.price}}</del>
               </span>
-              <span>${{object.discount_price}}</span>
+              <span>₦{{object.discount_price}}</span>
               {% else %}
-              <span>${{object.price}}</span>
+              <span>₦{{object.price}}</span>
               {% endif %}
             </p>
 
